--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/stripe-js": "^8.5.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
+    "@tanstack/react-query": "^5.90.11",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
