--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "openai": "^6.9.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
@@ -32,7 +32,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
