--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
     "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
