feat: Integrate OpenRouter SDK for AI recipe generation and refinement, updating dependencies and enhancing README documentation for API key usage.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@openrouter/sdk": "^0.2.9",
     "@stripe/stripe-js": "^8.5.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.83.0",
