--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "openai": "^6.9.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "sonner": "^2.0.7",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
